fix margin issue on mobile

--- a/src/app/components/blog/blog-all/blog-all.component.less
+++ b/src/app/components/blog/blog-all/blog-all.component.less
@@ -3,7 +3,13 @@
 }
 
 .tile {
-    margin: 30px;
+    @media (min-width: 768px) {
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+
+    margin-top: 30px;
+    margin-bottom: 30px;
 
     h1 {
         font-size: 1.8em;
